--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Script to set Slack topic from Google calendar",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js",
+    "deploy": "./deploy.sh"
   },
   "author": "",
   "license": "ISC",
