--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "src/index.js",
   "scripts": {
     "update": "node ./bin/update.js",
-    "deploy": "./deploy.sh"
+    "deploy": "./deploy.sh",
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@slack/web-api": "^5.11.0",
     "googleapis": "^58.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^8.1.1"
   }
 }
