--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "googleapis": "^58.0.0"
   },
   "devDependencies": {
-    "mocha": "^8.1.1"
+    "mocha": "^8.1.1",
+    "nock": "^13.0.3"
   }
 }
